# routes/recipes.js
@@ -27,7 +27,7 @@ router.get("/searchById/:recipeId", async (req, res, next) => {
 
 router.get("/search", async (req, res, next) => { 
   try {
-    const recipes = await recipes_utils.getRecipeByText(req.query.query, req.query.number || 5);
+    const recipes = await recipes_utils.getRecipeByText(req.query.query, req.query.number || 5, req.query.cuisine, req.query.diet, req.query.intolerance);
     res.send(recipes);
   } catch (error) {
     next(error);
@@ -37,32 +37,7 @@ router.get("/search", async (req, res, next) => {
 /**
  * This path gets recipe data in the body and saves it to the database
  */
-router.post("/RecipeDB", async (req, res, next) => {
-  try {
-    await recipes_utils.addRecipeToDB(req.body);
-    res.status(201).send("Recipe successfully added to database");
-  } catch (error) {
-    next(error);
-  }
-});
 
-router.get("/RecipeDB", async (req, res, next) => {
-  try {
-    const recipeId = req.query.recipeId;
-    if (!recipeId) {
-      return res.status(400).send("Missing recipeId query parameter.");
-    }
-
-    const recipe = await recipes_utils.getRecipeFromDB(recipeId);
-    res.status(200).json(recipe);
-  } catch (error) {
-    if (error.message === "Recipe not found in DB") {
-      res.status(404).send(error.message);
-    } else {
-      next(error);
-    }
-  }
-});
 
 
 
